# pretty_release_notes

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  WEBHOOK_SETUP.md  api.py  config.toml.example  database.py  docker-compose.yml  generator.py  github.py  github_client.py  main.py  openai_client.py  prompt.txt  pyproject.toml  release_notes.py  requirements-web.txt  requirements.txt  server.py  ui.py  webhook_server.py  webhook_test.py
.github/workflows/: lint.yml  tests.yml
adapters/: cli_progress.py
core/: config.py  config_loader.py  execution.py  interfaces.py
docs/adr/: 001-multi-mode-architecture.md  002-user-directory-database-storage.md  003-toml-configuration.md
examples/: library_usage.py
models/: __init__.py  _utils.py  change.py  commit.py  issue.py  pull_request.py  release_notes.py  release_notes_line.py  repository.py
pretty_release_notes/: __init__.py  __main__.py  api.py  database.py  generator.py  github_client.py  main.py  openai_client.py  setup_command.py  ui.py
pretty_release_notes/adapters/: __init__.py  cli_progress.py
pretty_release_notes/core/: __init__.py  config.py  config_loader.py  execution.py  interfaces.py
pretty_release_notes/models/: __init__.py  _utils.py  change.py  commit.py  pull_request.py  release_notes.py  release_notes_line.py
pretty_release_notes/web/: __init__.py  app.py  server.py
tests/: pull_request.py  test_api.py  test_core.py  test_database_threading.py  test_execution.py  test_generator.py  test_main.py  test_models_utils.py  test_openai_client.py  test_pull_request.py  test_release_notes.py  test_setup_command.py  test_web_api.py
thoughts/shared/plans/: 2025-01-19-multi-mode-architecture.md
web/: app.py  server.py
